--- a/css/coolcar.css
+++ b/css/coolcar.css
@@ -2,15 +2,6 @@
 	width: 80%;
 }
 
-#start-screen-btn {
-	padding: 25%;
-	padding-top: 2%;
-	padding-bottom: 2%;
-	margin: 5%;
-	font-size: 26px;
-	font-weight: 800;
-}
-
 #inner {
 	width: 100%;
 	overflow: hidden;
@@ -20,7 +11,7 @@
 	cursor: url(../img/pointer.png), auto;
 }
 
-#questions .row-fluid {
+#features .row-fluid {
 	display: inline-block;
 }
 
