--- a/css/coolcar.css
+++ b/css/coolcar.css
@@ -1,30 +1,86 @@
+/* Carousel-hahmo */
 #wrapper {
-	width: 80%;
+	width: 100%;
+	position: relative;
 }
 
-#inner {
-	width: 100%;
-	overflow: hidden;
-	left: 0;
-}
 #carousel-hahmo img {
 	cursor: url(../img/pointer.png), auto;
+	width: 150px;
 }
 
-#features .row-fluid {
-	display: inline-block;
+#prevCarHah, #nextCarHah {
+
 }
+
+#featuresCar {
+	position: relative;
+}
+
+.prev, .next {
+	background: url("../img/arrows.png") no-repeat;
+	display: block;
+	height: 76px;
+	text-indent: -9999px;
+	width: 76px;
+	position: absolute;
+	top: 45%;
+}
+.prevF, .nextF {
+	background: url("../img/arrows.png") no-repeat;
+	display: block;
+	height: 76px;
+	text-indent: -9999px;
+	width: 76px;
+	position: absolute;
+	bottom: 25%;
+}
+
+.prev, .prevF {
+	left: -6%;
+}
+
+.prev:hover, .prevF:hover{
+	background-position: 0 -96px;
+}
+
+.next, .nextF {
+	background-position: -99px 0;
+	right:-6%;
+}
+
+.next:hover, .nextF:hover {
+	background-position: -99px -96px;
+}
+
+/* Userlist caroufredsel*/
+#userwrap {
+	
+}
+
+#userList {
+	top:0;
+}
+
+#userList li {
+	background-color: #4D4D4D;
+	font-size: 25px;
+	color: #ffffff;
+	font-weight: 800;
+	cursor: url(../img/pointer.png), auto;
+	padding: 3%;
+}
+
 
 .extrawrap {
-	min-width: 100px;
-	min-height: 150px;
+	min-width: 100%;
+	z-index: 1;
 }
 
 .extrawrap img {
 	cursor: pointer;
 	cursor: url(../img/pointer.png), auto;
-	min-width: 150px;	
-	min-height: 150px;
-	max-height: 150px;
-	max-width: 200px;
+	min-width: 150px;
+	width: 150px;
+	height: 150px;
 }
