--- a/css/generic.css
+++ b/css/generic.css
@@ -4,27 +4,92 @@
 @import url("skin.css");
 @import url("coolcar.css");
 
+@import url(http://fonts.googleapis.com/css?family=Loved+by+the+King);
+@import url(http://fonts.googleapis.com/css?family=Codystar:300,400|Corben:400,700|Buda:300|Ranchers);
+
 html {
 	cursor: url(../img/cursor.png), auto;
+	
+	background: url(../img/bg.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/retrobg.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/retrobg.jpg', sizingMethod='scale')";
 }
 
 body {
+	font-family: 'Corben', cursive;
+	font-size: 120%;
+	background: url(../img/bg.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/retrobg.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/retrobg.jpg', sizingMethod='scale')";
 	margin: 0;
-	text-align: left;
+	text-align: left;	
 }
-button:hover{
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Ranchers', cursive;
+	color: #FFFFFF;
+}
+p {
+	font-family: 'Corben', cursive;
+	/*font-family: 'Codystar', cursive;*/
+}
+h3 {
+	text-shadow: 2px 1px 2px rgba(0, 0, 0, 1);
+	color: #FFFFFF;
+}
+
+img {
+	border:outset;
+	border-color:#FFFFFF;
+	border-width: thick;
+	border-style: solid;	
+}
+
+button {
+	font-family: 'Buda', cursive;
+	font-weight: 900;
+}
+
+button:hover, a:hover{
 	cursor: url(../img/pointer.png), auto;
+}
+
+#logo {
+	border:none;
+}
+
+#userName {
+	font-size: 23px;
+	padding: 2%;
+	width: 50%;
+}
+
+#taken {
+	font-size: 90%;
+	color: #DF3F3F;
+}
+
+.help-block {	
+	color: #F2F2F2;
 }
 
 /* Scroll instructions */
 	/*just the text class*/
 	.inst {
-		font-style: italic;
-		color: #666666;
+		font-family: 'Corben', cursive;
+		font-weight: 300;
+		line-height: 80%;
+		color: #000000;
 		margin: 3%;
-		line-height: 25px;
-		font-size: 14px;
-		font-weight: 700;
+		
 	}
 
 #scroll-ins{
@@ -68,52 +133,119 @@ button:hover{
 	cursor: url(../img/pointer.png), auto;
 }
 
+.btn-warning {
+	color: #000000;
+}
+
 .optbtns {
 	margin: 2% 0 2% 0;
 }
 .optbtns button{
 	margin-top: 2%;
 }
-
-.next {
-	float: right;
-}
 						/* LONG and TALL BUTTONS*/
 .long-btn {
 	width: 100%;
 	padding-top: 5%;
 	padding-bottom: 5%;
-	font-size: 35px;
+	
+	line-height: initial;
 }
 
-.previous {
-	float: left;
+
+
+/*----------------------LOGIN screen-------------
+#wrapper {
+	background: url(../img/bg-carousel.jpg) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-carousel.jpg', sizingMethod='scale');
+	-ms-filter: "progid:DXImageTransform.Microsoft.AlphaImageLoader(src='../img/bg-carousel.jpg', sizingMethod='scale')";
+} */
+
+
+#userForm {
+	opacity: 1;
 }
 
 #loginscreen {
 	margin-top: 5%;
 }
 
-#welcomeIMG {
-	width: 25%;
-	float:left;
+#loginArea {
+	padding: 3%;
+	background: rgba(0, 0, 0, 0.35);
+}
+
+#insArea {
+	padding: 3%;
+	background: rgba(255, 255, 255, 0.35);
+}
+
+.helpTxt {
+	color: #FFFFFF;
+	font-style: italic;
+	padding: 2%;
+	padding-left: 5px;
+}
+
+#welcomeImg img{
+	width: 100%;
+	max-width: 300px;
+}
+#welcomeArea {
+	background: rgba(0, 0, 0, 0.45);
+	padding: 2%;
+}
+
+#welcomeArea, #welcomeImg {
+	display: inline-table;
 }
 
 /* Control panel */
-#instructions {
-	font-size: 20px;
-	font-style: italic;
+#instructionsDiv {
 	margin-bottom: 1%;
-	background: rgba(0, 0, 0, 0.25);	
+	background: rgba(0, 0, 0, 0.45);	
 	opacity: 1.0;
 	display: inline-block;
 	padding: 2%;
 	padding-right: 5%;
 }
+
+#instructions {
+	color:#FFFFFF;
+}
+
+#cp {
+	background-color: #F4FA58;
+	padding: 5%;
+	padding-top: 1%;
+}
+
 #cp p {
 	margin: 0;
-	font-size: 20px;
 }
+
+#features, #readyArea, #readyArea2, #guessingArea, #singlequestion {
+	background-color: #04B4AE;
+	padding: 5%;
+	padding-top: 1%;
+}
+
 #hahmosi {
 	width: 100%;
+}
+
+
+#board {
+	background-color: rgba(0, 0, 0, 0.45);
+	padding: 1%;
+	color:#FFFFFF;
+	margin-left: 0;
+}
+
+#board img{
+	width: 30%;
 }
